# CppPrecompiler

./: .clang-format  .gitignore  Accessor.hpp  CMakeLists.txt  CompUnit.h  StructTree.h  Tokens.cpp  Tokens.h  main.cpp  precxx.l
src/: CMakeLists.txt  CompUnit.h  main.cpp
src/lexer/: CMakeLists.txt  lexer.l
test/: tester.pccxx
